15_Static_Variable_Method_Class/# Static Class.txt

Static Variable   : Static method can access only static variable.
Instance Variable : Static and non-static(both) method can access Instance variable.


Static Method   : Static method can access only static Method.
Instance Method : Static and non-static(both) method can access Instance Method.


We can't Create Static Outer Class.





class A
{
	int x = 100;
	void show()
	{
		System.out.println("X : " + x);
	}
}

class Q01_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show();
		
	}
}

/* 

Output : X : 100 


*/




class A
{
	int x = 100;
	static void show()
	{
		System.out.println("X : " + x);
	}
}

class Q02_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show();
		
	}
}

/* 

 error: non-static variable x cannot be referenced from a static context
                System.out.println("X : " + x);
                                            ^
-----------------------------------------------------------------------------------------------


*/






class A
{
	static int x = 100;
	static void show()
	{
		System.out.println("X : " + x);
	}
}

class Q03_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show();
		
	}
}

/* 

 X : 100
-----------------------------------------------------------------------------------------------
*/





class A
{
	int x = 100;
	void show2()
	{
		System.out.println("Show - 2");
	}
	
	void show1()
	{
		show2();
		System.out.println("X : " + x);
	}
	
}

class Q04_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show1();
	}
}

/* 

Show - 2
X : 100

-----------------------------------------------------------------------------------------------
*/





class A
{
	int x = 100;
	void show2()
	{
		System.out.println("Show - 2");
	}
	
	static void show1()
	{
		show2();
		System.out.println("X : " + x);
	}
	
}

class Q05_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show1();
	}
}

/* 

error: non-static method show2() cannot be referenced from a static context
                show2();
                ^
Q05_Static_Class.java:12: error: non-static variable x cannot be referenced from a static context
                System.out.println("X : " + x);
                                            ^
-----------------------------------------------------------------------------------------------
*/





class A
{
	int x = 100;
	void show2()
	{
		System.out.println("Show - 2");
	}
	
	static void show1()
	{
		A a = new A();
		a.show2();
		System.out.println("X : " + x);
	}
	
}

class Q06_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show1();
	}
}

/* 

error: non-static variable x cannot be referenced from a static context
                System.out.println("X : " + x);
                                            ^
-----------------------------------------------------------------------------------------------
*/





class A
{
	int x = 100;
	void show2()
	{
		System.out.println("Show - 2");
	}
	
	static void show1()
	{
		A a = new A();
		a.show2();
		System.out.println("X : " + a.x);
	}
	
}

class Q07_Static_Class
{
	public static void main(String args[])
	{
		A a = new A();
		a.show1();
	}
}

/* 

Show - 2
X : 100
-----------------------------------------------------------------------------------------------
*/





class A
{
	static int x = 100;
}

class Q08_Static_Class
{
	public static void main(String args[])
	{
		System.out.println("X : " + A.x );
	}
}

/* 

Output : X : 100 


*/



class Q09_Static_Class
{
	static int x = 100;
	public static void main(String args[])
	{
		System.out.println("X : " + x );
	}
}

/* 

Output : X : 100 

------------------------------------------------------------------------------------
*/


class Q10_Static_Class
{
	int x = 100;
	public static void main(String args[])
	{
		System.out.println("X : " + x );
	}
}

/* 

Output :
error: non-static variable x cannot be referenced from a static context
                System.out.println("X : " + x );
                                            ^

------------------------------------------------------------------------------------
*/


class Q11_Static_Class
{
	int x = 100;
	public static void main(String args[])
	{
		Q11_Static_Class q11 = new Q11_Static_Class();
		
		System.out.println("X : " + q11.x );
	}
}

/* 

Output : X : 100

------------------------------------------------------------------------------------
*/


static class Q12_Static_Class
{
	int x = 100;
	public static void main(String args[])
	{
		Q11_Static_Class q11 = new Q11_Static_Class();
		
		System.out.println("X : " + q11.x );
	}
}

/* 

Output : 
error: modifier static not allowed here
static class Q12_Static_Class
       ^

------------------------------------------------------------------------------------
*/


